--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Austin Peterson <austin@akpwebdesign.com>",
   "license": "MIT",
   "dependencies": {
-    "discordie": "^0.5.7"
+    "discordie": "^0.5.7",
+    "irc-colors": "^1.3.0"
   }
 }
